--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
-<h1>
-  {{title}}
-</h1>
+<div style="position: fixed; width: 100%">
+<md-toolbar color="primary">
+  <span>Application Title</span>
+
+  <!-- This fills the remaining space of the current row -->
+  <span class="example-fill-remaining-space"></span>
+
+  <span>Right Aligned Text</span>
+</md-toolbar>
+</div>
+
+<div class="app-content" id="foo">
+  <md-card>
+    <button md-button> flat </button>
+    <md-list>
+    <md-list-item> Pepper </md-list-item>
+    <md-list-item> Salt </md-list-item>
+    <md-list-item> Paprika </md-list-item>
+    </md-list>
+
+  </md-card>
+</div>
